[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
build = "build.rs"
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "beefy-node"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "2.0.0"

[[bin]]
name = "beefy-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }

[dependencies]
jsonrpc-core = "15.0.0"
structopt = "0.3.21"

# local dependencies
beefy-primitives = { version = "0.1.0", path = "../../beefy-primitives" }
beefy-gadget = { version = "0.1.0", path = "../../beefy-gadget" }
beefy-gadget-rpc = { version = "0.1.0", path = "../../beefy-gadget/rpc" }
beefy-node-runtime = { path = "../runtime", version = "2.0.0" }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }

sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-cli = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "apopiak-xcm-origin" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "apopiak-xcm-origin" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "apopiak-xcm-origin" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }

[features]
default = []
runtime-benchmarks = []
