[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
build = "build.rs"
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "beefy-node"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "2.0.0"

[[bin]]
name = "beefy-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "statemint" }

[dependencies]
jsonrpc-core = "15.0.0"
structopt = "0.3.21"

# local dependencies
beefy-primitives = { version = "0.1.0", path = "../../beefy-primitives" }
beefy-gadget = { version = "0.1.0", path = "../../beefy-gadget" }
beefy-gadget-rpc = { version = "0.1.0", path = "../../beefy-gadget/rpc" }
beefy-node-runtime = { path = "../runtime", version = "2.0.0" }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "statemint" }

sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-cli = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "statemint" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "statemint" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "statemint" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "statemint" }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "statemint" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "statemint" }

[features]
default = []
runtime-benchmarks = []
